tests/snapshots/formats__orc__plain.orc.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ plain.orc — ORC, NONE compression, 3 rows, 1 stripes, 3 types  [0x0+0xac]
    Magic: "ORC"  [0x0+0x3]
  ▾ Stripes — 1
    ▾ Stripe 0 — 3 rows  [0x3+0x31]
        Data streams  [0x3+0x8]
      ▾ Stripe footer  [0xb+0x29]
        ▾ streams — Stream  [0xb+0x8]
            kind: DATA (0x1)  [0xd+0x2]
            column: 1  [0xf+0x2]
            length: 3  [0x11+0x2]
        ▾ streams — Stream  [0x13+0x8]
            kind: DATA (0x1)  [0x15+0x2]
            column: 2  [0x17+0x2]
            length: 3  [0x19+0x2]
        ▾ streams — Stream  [0x1b+0x8]
            kind: LENGTH (0x2)  [0x1d+0x2]
            column: 2  [0x1f+0x2]
            length: 2  [0x21+0x2]
        ▾ columns — ColumnEncoding  [0x23+0x4]
            kind: DIRECT (0x0)  [0x25+0x2]
        ▾ columns — ColumnEncoding  [0x27+0x4]
            kind: DIRECT_V2 (0x2)  [0x29+0x2]
        ▾ columns — ColumnEncoding  [0x2b+0x4]
            kind: DIRECT_V2 (0x2)  [0x2d+0x2]
          writerTimezone: "UTC"  [0x2f+0x5]
        DATA (column 1) — 3 bytes  [0x3+0x3]
        DATA (column 2) — 3 bytes  [0x6+0x3]
        LENGTH (column 2) — 2 bytes  [0x9+0x2]
  ▾ Footer  [0x34+0x60]
      headerLength: 3  [0x34+0x2]
      contentLength: 49  [0x36+0x2]
    ▾ stripes — StripeInformation  [0x38+0xc]
        offset: 3  [0x3a+0x2]
        indexLength: 0  [0x3c+0x2]
        dataLength: 8  [0x3e+0x2]
        footerLength: 41  [0x40+0x2]
        numberOfRows: 3  [0x42+0x2]
    ▾ types — Type  [0x44+0x11]
        kind: STRUCT (0xc)  [0x46+0x2]
        subtypes: "1, 2"  [0x48+0x4]
        fieldNames: "x"  [0x4c+0x3]
        fieldNames: "name"  [0x4f+0x6]
    ▾ types — Type  [0x55+0x4]
        kind: INT (0x3)  [0x57+0x2]
    ▾ types — Type  [0x59+0x4]
        kind: STRING (0x7)  [0x5b+0x2]
    ▾ metadata — UserMetadataItem  [0x5d+0x16]
        name: "origin"  [0x5f+0x8]
        value: 6f 72 63 5f 67 65 6e 2e 70 79  |orc_gen.py| — 10 bytes  [0x67+0xc]
      numberOfRows: 3  [0x73+0x2]
    ▾ statistics — ColumnStatistics  [0x75+0x4]
        numberOfValues: 3  [0x77+0x2]
    ▾ statistics — ColumnStatistics  [0x79+0xa]
        numberOfValues: 3  [0x7b+0x2]
      ▾ intStatistics — IntegerStatistics  [0x7d+0x6]
          minimum: 1  [0x7f+0x2]
          maximum: 3  [0x81+0x2]
    ▾ statistics — ColumnStatistics  [0x83+0xc]
        numberOfValues: 3  [0x85+0x2]
      ▾ stringStatistics — StringStatistics  [0x87+0x8]
          minimum: "a"  [0x89+0x3]
          maximum: "c"  [0x8c+0x3]
      rowIndexStride: 10000  [0x8f+0x3]
      writer: 1  [0x92+0x2]
  ▾ PostScript  [0x94+0x17]
      footerLength: 96  [0x94+0x2]
      compression: NONE (0x0)  [0x96+0x2]
      compressionBlockSize: 262144  [0x98+0x4]
      version: "0, 12"  [0x9c+0x4]
      metadataLength: 0  [0xa0+0x2]
      writerVersion: 9  [0xa2+0x2]
      magic: "ORC"  [0xa4+0x7]
    PostScript length: 23  [0xab+0x1]
