tests/snapshots/formats__orc__snappy.orc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ snappy.orc — ORC, SNAPPY compression, 3 rows, 1 stripes, 3 types  [0x0+0x16b]
    Magic: "ORC"  [0x0+0x3]
    Metadata — stripe statistics  [0xaf+0x31]
  ▾ Stripes — 1
    ▾ Stripe 0 — 3 rows  [0x3+0xac]
        Index streams  [0x3+0x47]
        Data streams  [0x4a+0x1f]
      ▾ Stripe footer  [0x69+0x46]
        ▾ streams — Stream  [#4:0x0+0x8]
            kind: ROW_INDEX (0x6)  [#4:0x2+0x2]
            column: 0  [#4:0x4+0x2]
            length: 11  [#4:0x6+0x2]
        ▾ streams — Stream  [#4:0x8+0x8]
            kind: ROW_INDEX (0x6)  [#4:0xa+0x2]
            column: 1  [#4:0xc+0x2]
            length: 24  [#4:0xe+0x2]
        ▾ streams — Stream  [#4:0x10+0x8]
            kind: ROW_INDEX (0x6)  [#4:0x12+0x2]
            column: 2  [#4:0x14+0x2]
            length: 36  [#4:0x16+0x2]
        ▾ streams — Stream  [#4:0x18+0x8]
            kind: DATA (0x1)  [#4:0x1a+0x2]
            column: 1  [#4:0x1c+0x2]
            length: 7  [#4:0x1e+0x2]
        ▾ streams — Stream  [#4:0x20+0x8]
            kind: LENGTH (0x2)  [#4:0x22+0x2]
            column: 2  [#4:0x24+0x2]
            length: 7  [#4:0x26+0x2]
        ▾ streams — Stream  [#4:0x28+0x8]
            kind: DATA (0x1)  [#4:0x2a+0x2]
            column: 2  [#4:0x2c+0x2]
            length: 17  [#4:0x2e+0x2]
        ▾ columns — ColumnEncoding  [#4:0x30+0x6]
            kind: DIRECT (0x0)  [#4:0x32+0x2]
            dictionarySize: 0  [#4:0x34+0x2]
        ▾ columns — ColumnEncoding  [#4:0x36+0x6]
            kind: DIRECT_V2 (0x2)  [#4:0x38+0x2]
            dictionarySize: 0  [#4:0x3a+0x2]
        ▾ columns — ColumnEncoding  [#4:0x3c+0x6]
            kind: DIRECT_V2 (0x2)  [#4:0x3e+0x2]
            dictionarySize: 0  [#4:0x40+0x2]
          writerTimezone: "GMT"  [#4:0x42+0x5]
        ROW_INDEX (column 0) — 11 bytes  [0x3+0xb]
        ROW_INDEX (column 1) — 24 bytes  [0xe+0x18]
        ROW_INDEX (column 2) — 36 bytes  [0x26+0x24]
        DATA (column 1) — 7 bytes  [0x4a+0x7]
        LENGTH (column 2) — 7 bytes  [0x51+0x7]
        DATA (column 2) — 17 bytes  [0x58+0x11]
  ▾ Footer  [0xe0+0x73]
      headerLength: 3  [#2:0x0+0x2]
      contentLength: 172  [#2:0x2+0x3]
    ▾ stripes — StripeInformation  [#2:0x5+0xc]
        offset: 3  [#2:0x7+0x2]
        indexLength: 71  [#2:0x9+0x2]
        dataLength: 31  [#2:0xb+0x2]
        footerLength: 70  [#2:0xd+0x2]
        numberOfRows: 3  [#2:0xf+0x2]
    ▾ types — Type  [#2:0x11+0x18]
        kind: STRUCT (0xc)  [#2:0x13+0x2]
        subtypes: "1, 2"  [#2:0x15+0x4]
        fieldNames: "id"  [#2:0x19+0x4]
        fieldNames: "name"  [#2:0x1d+0x6]
        maximumLength: 0  [#2:0x23+0x2]
        precision: 0  [#2:0x25+0x2]
        scale: 0  [#2:0x27+0x2]
    ▾ types — Type  [#2:0x29+0xa]
        kind: INT (0x3)  [#2:0x2b+0x2]
        maximumLength: 0  [#2:0x2d+0x2]
        precision: 0  [#2:0x2f+0x2]
        scale: 0  [#2:0x31+0x2]
    ▾ types — Type  [#2:0x33+0xa]
        kind: STRING (0x7)  [#2:0x35+0x2]
        maximumLength: 0  [#2:0x37+0x2]
        precision: 0  [#2:0x39+0x2]
        scale: 0  [#2:0x3b+0x2]
      numberOfRows: 3  [#2:0x3d+0x2]
    ▾ statistics — ColumnStatistics  [#2:0x3f+0x6]
        numberOfValues: 3  [#2:0x41+0x2]
        hasNull: 0  [#2:0x43+0x2]
    ▾ statistics — ColumnStatistics  [#2:0x45+0xe]
        numberOfValues: 3  [#2:0x47+0x2]
      ▾ intStatistics — IntegerStatistics  [#2:0x49+0x8]
          minimum: 1  [#2:0x4b+0x2]
          maximum: 3  [#2:0x4d+0x2]
          sum: 6  [#2:0x4f+0x2]
        hasNull: 0  [#2:0x51+0x2]
    ▾ statistics — ColumnStatistics  [#2:0x53+0x18]
        numberOfValues: 3  [#2:0x55+0x2]
      ▾ stringStatistics — StringStatistics  [#2:0x57+0x12]
          minimum: "alpha"  [#2:0x59+0x7]
          maximum: "gamma"  [#2:0x60+0x7]
          sum: 28  [#2:0x67+0x2]
        hasNull: 0  [#2:0x69+0x2]
      rowIndexStride: 10000  [#2:0x6b+0x3]
      writer: 1  [#2:0x6e+0x2]
      softwareVersion: "2.2.2"  [#2:0x70+0x7]
  ▾ PostScript  [0x153+0x17]
      footerLength: 115  [0x153+0x2]
      compression: SNAPPY (0x2)  [0x155+0x2]
      compressionBlockSize: 65536  [0x157+0x4]
      version: "0, 12"  [0x15b+0x4]
      metadataLength: 49  [0x15f+0x2]
      writerVersion: 6  [0x161+0x2]
      magic: "ORC"  [0x163+0x7]
    PostScript length: 23  [0x16a+0x1]
