tests/snapshots/formats__orc__zlib.orc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ zlib.orc — ORC, ZLIB compression, 3 rows, 1 stripes, 3 types  [0x0+0xa7]
    Magic: "ORC"  [0x0+0x3]
  ▾ Stripes — 1
    ▾ Stripe 0 — 3 rows  [0x3+0x2b]
      ▾ Stripe footer  [0xb+0x23]
        ▾ streams — Stream  [#4:0x0+0x8]
            kind: DATA (0x1)  [#4:0x2+0x2]
            column: 1  [#4:0x4+0x2]
            length: 3  [#4:0x6+0x2]
        ▾ streams — Stream  [#4:0x8+0x8]
            kind: DATA (0x1)  [#4:0xa+0x2]
            column: 2  [#4:0xc+0x2]
            length: 3  [#4:0xe+0x2]
        ▾ streams — Stream  [#4:0x10+0x8]
            kind: LENGTH (0x2)  [#4:0x12+0x2]
            column: 2  [#4:0x14+0x2]
            length: 2  [#4:0x16+0x2]
        ▾ columns — ColumnEncoding  [#4:0x18+0x4]
            kind: DIRECT (0x0)  [#4:0x1a+0x2]
        ▾ columns — ColumnEncoding  [#4:0x1c+0x4]
            kind: DIRECT_V2 (0x2)  [#4:0x1e+0x2]
        ▾ columns — ColumnEncoding  [#4:0x20+0x4]
            kind: DIRECT_V2 (0x2)  [#4:0x22+0x2]
          writerTimezone: "UTC"  [#4:0x24+0x5]
      ▾ DATA (column 1) — 3 bytes  [0x3+0x3]
        ▾ Compression chunks  [0x3+0x3]
            Chunk header: 32769 — compressed  [0x3+0x3]
            Compressed chunk — 32769 bytes  [0x6+0x0]
              ! malformed: chunk of 32769 bytes runs past the end of its section
          ! malformed: deflate: input ends unexpectedly [0x6+0x0]
      ▾ DATA (column 2) — 3 bytes  [0x6+0x3]
        ▾ Compression chunks  [0x6+0x3]
            Chunk header: 3256624 — stored  [0x6+0x3]
            Stored chunk — 3256624 bytes  [0x9+0x0]
              ! malformed: chunk of 3256624 bytes runs past the end of its section
          Encoded values:   || — 0 bytes, values (run-length encoded)  [#5:0x0+0x0]
      ▾ LENGTH (column 2) — 2 bytes  [0x9+0x2]
        ▾ Compression chunks  [0x9+0x2]
            Chunk header: 256 — stored  [0x9+0x2]
            Stored chunk — 256 bytes  [0xb+0x0]
              ! malformed: chunk of 256 bytes runs past the end of its section
          Encoded values:   || — 0 bytes, lengths (integer run-length)  [#6:0x0+0x0]
  ▾ Footer  [0x2e+0x61]
      headerLength: 3  [#2:0x0+0x2]
      contentLength: 43  [#2:0x2+0x2]
    ▾ stripes — StripeInformation  [#2:0x4+0xc]
        offset: 3  [#2:0x6+0x2]
        indexLength: 0  [#2:0x8+0x2]
        dataLength: 8  [#2:0xa+0x2]
        footerLength: 35  [#2:0xc+0x2]
        numberOfRows: 3  [#2:0xe+0x2]
    ▾ types — Type  [#2:0x10+0x11]
        kind: STRUCT (0xc)  [#2:0x12+0x2]
        subtypes: "1, 2"  [#2:0x14+0x4]
        fieldNames: "x"  [#2:0x18+0x3]
        fieldNames: "name"  [#2:0x1b+0x6]
    ▾ types — Type  [#2:0x21+0x4]
        kind: INT (0x3)  [#2:0x23+0x2]
    ▾ types — Type  [#2:0x25+0x4]
        kind: STRING (0x7)  [#2:0x27+0x2]
    ▾ metadata — UserMetadataItem  [#2:0x29+0x16]
        name: "origin"  [#2:0x2b+0x8]
        value: 6f 72 63 5f 67 65 6e 2e 70 79  |orc_gen.py| — 10 bytes  [#2:0x33+0xc]
      numberOfRows: 3  [#2:0x3f+0x2]
    ▾ statistics — ColumnStatistics  [#2:0x41+0x4]
        numberOfValues: 3  [#2:0x43+0x2]
    ▾ statistics — ColumnStatistics  [#2:0x45+0xa]
        numberOfValues: 3  [#2:0x47+0x2]
      ▾ intStatistics — IntegerStatistics  [#2:0x49+0x6]
          minimum: 1  [#2:0x4b+0x2]
          maximum: 3  [#2:0x4d+0x2]
    ▾ statistics — ColumnStatistics  [#2:0x4f+0xc]
        numberOfValues: 3  [#2:0x51+0x2]
      ▾ stringStatistics — StringStatistics  [#2:0x53+0x8]
          minimum: "a"  [#2:0x55+0x3]
          maximum: "c"  [#2:0x58+0x3]
      rowIndexStride: 10000  [#2:0x5b+0x3]
      writer: 1  [#2:0x5e+0x2]
  ▾ PostScript  [0x8f+0x17]
      footerLength: 97  [0x8f+0x2]
      compression: ZLIB (0x1)  [0x91+0x2]
      compressionBlockSize: 262144  [0x93+0x4]
      version: "0, 12"  [0x97+0x4]
      metadataLength: 0  [0x9b+0x2]
      writerVersion: 9  [0x9d+0x2]
      magic: "ORC"  [0x9f+0x7]
    PostScript length: 23  [0xa6+0x1]
