tests/snapshots/formats__orc__zstd.orc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ zstd.orc — ORC, ZSTD compression, 3 rows, 1 stripes, 3 types  [0x0+0x176]
    Magic: "ORC"  [0x0+0x3]
  ▾ Metadata — stripe statistics  [0xb3+0x31]
    ▾ Compression chunks  [0xb3+0x31]
        Chunk header: 46 — stored  [0xb3+0x3]
        Stored chunk: 0a 2c 0a 04 08 03 50 00 0a 0c 08 03 12 06 08 02 …  |.,....P.........| — 46 bytes  [0xb6+0x2e]
    ▾ stripeStats — StripeStatistics  [#2:0x0+0x2e]
      ▾ colStats — ColumnStatistics  [#2:0x2+0x6]
          numberOfValues: 3  [#2:0x4+0x2]
          hasNull: 0  [#2:0x6+0x2]
      ▾ colStats — ColumnStatistics  [#2:0x8+0xe]
          numberOfValues: 3  [#2:0xa+0x2]
        ▾ intStatistics — IntegerStatistics  [#2:0xc+0x8]
            minimum: 1  [#2:0xe+0x2]
            maximum: 3  [#2:0x10+0x2]
            sum: 6  [#2:0x12+0x2]
          hasNull: 0  [#2:0x14+0x2]
      ▾ colStats — ColumnStatistics  [#2:0x16+0x18]
          numberOfValues: 3  [#2:0x18+0x2]
        ▾ stringStatistics — StringStatistics  [#2:0x1a+0x12]
            minimum: "alpha"  [#2:0x1c+0x7]
            maximum: "gamma"  [#2:0x23+0x7]
            sum: 28  [#2:0x2a+0x2]
          hasNull: 0  [#2:0x2c+0x2]
  ▾ Stripes — 1
    ▾ Stripe 0 — 3 rows  [0x3+0xb0]
      ▾ Stripe footer  [0x69+0x4a]
        ▾ streams — Stream  [#3:0x0+0x8]
            kind: ROW_INDEX (0x6)  [#3:0x2+0x2]
            column: 0  [#3:0x4+0x2]
            length: 11  [#3:0x6+0x2]
        ▾ streams — Stream  [#3:0x8+0x8]
            kind: ROW_INDEX (0x6)  [#3:0xa+0x2]
            column: 1  [#3:0xc+0x2]
            length: 24  [#3:0xe+0x2]
        ▾ streams — Stream  [#3:0x10+0x8]
            kind: ROW_INDEX (0x6)  [#3:0x12+0x2]
            column: 2  [#3:0x14+0x2]
            length: 36  [#3:0x16+0x2]
        ▾ streams — Stream  [#3:0x18+0x8]
            kind: DATA (0x1)  [#3:0x1a+0x2]
            column: 1  [#3:0x1c+0x2]
            length: 7  [#3:0x1e+0x2]
        ▾ streams — Stream  [#3:0x20+0x8]
            kind: LENGTH (0x2)  [#3:0x22+0x2]
            column: 2  [#3:0x24+0x2]
            length: 7  [#3:0x26+0x2]
        ▾ streams — Stream  [#3:0x28+0x8]
            kind: DATA (0x1)  [#3:0x2a+0x2]
            column: 2  [#3:0x2c+0x2]
            length: 17  [#3:0x2e+0x2]
        ▾ columns — ColumnEncoding  [#3:0x30+0x6]
            kind: DIRECT (0x0)  [#3:0x32+0x2]
            dictionarySize: 0  [#3:0x34+0x2]
        ▾ columns — ColumnEncoding  [#3:0x36+0x6]
            kind: DIRECT_V2 (0x2)  [#3:0x38+0x2]
            dictionarySize: 0  [#3:0x3a+0x2]
        ▾ columns — ColumnEncoding  [#3:0x3c+0x6]
            kind: DIRECT_V2 (0x2)  [#3:0x3e+0x2]
            dictionarySize: 0  [#3:0x40+0x2]
          writerTimezone: "GMT"  [#3:0x42+0x5]
      ▾ ROW_INDEX (column 0) — 11 bytes  [0x3+0xb]
        ▾ Compression chunks  [0x3+0xb]
            Chunk header: 8 — stored  [0x3+0x3]
            Stored chunk: 0a 06 12 04 08 03 50 00  |......P.| — 8 bytes  [0x6+0x8]
        ▾ entry — RowIndexEntry  [#4:0x0+0x8]
          ▾ statistics — ColumnStatistics  [#4:0x2+0x6]
              numberOfValues: 3  [#4:0x4+0x2]
              hasNull: 0  [#4:0x6+0x2]
      ▾ ROW_INDEX (column 1) — 24 bytes  [0xe+0x18]
        ▾ Compression chunks  [0xe+0x18]
            Chunk header: 21 — stored  [0xe+0x3]
            Stored chunk: 0a 13 0a 03 00 00 00 12 0c 08 03 12 06 08 02 10 …  |................| — 21 bytes  [0x11+0x15]
        ▾ entry — RowIndexEntry  [#5:0x0+0x15]
            positions: "0, 0, 0"  [#5:0x2+0x5]
          ▾ statistics — ColumnStatistics  [#5:0x7+0xe]
              numberOfValues: 3  [#5:0x9+0x2]
            ▾ intStatistics — IntegerStatistics  [#5:0xb+0x8]
                minimum: 1  [#5:0xd+0x2]
                maximum: 3  [#5:0xf+0x2]
                sum: 6  [#5:0x11+0x2]
              hasNull: 0  [#5:0x13+0x2]
      ▾ ROW_INDEX (column 2) — 36 bytes  [0x26+0x24]
        ▾ Compression chunks  [0x26+0x24]
            Chunk header: 33 — stored  [0x26+0x3]
            Stored chunk: 0a 1f 0a 05 00 00 00 00 00 12 16 08 03 22 10 0a …  |............."..| — 33 bytes  [0x29+0x21]
        ▾ entry — RowIndexEntry  [#6:0x0+0x21]
            positions: "0, 0, 0, 0, 0"  [#6:0x2+0x7]
          ▾ statistics — ColumnStatistics  [#6:0x9+0x18]
              numberOfValues: 3  [#6:0xb+0x2]
            ▾ stringStatistics — StringStatistics  [#6:0xd+0x12]
                minimum: "alpha"  [#6:0xf+0x7]
                maximum: "gamma"  [#6:0x16+0x7]
                sum: 28  [#6:0x1d+0x2]
              hasNull: 0  [#6:0x1f+0x2]
      ▾ DATA (column 1) — 7 bytes  [0x4a+0x7]
        ▾ Compression chunks  [0x4a+0x7]
            Chunk header: 4 — stored  [0x4a+0x3]
            Stored chunk: 46 02 24 60  |F.$`| — 4 bytes  [0x4d+0x4]
          Encoded values: 46 02 24 60  |F.$`| — 4 bytes, values (run-length encoded)  [#7:0x0+0x4]
      ▾ LENGTH (column 2) — 7 bytes  [0x51+0x7]
        ▾ Compression chunks  [0x51+0x7]
            Chunk header: 4 — stored  [0x51+0x3]
            Stored chunk: 46 02 54 50  |F.TP| — 4 bytes  [0x54+0x4]
          Encoded values: 46 02 54 50  |F.TP| — 4 bytes, lengths (integer run-length)  [#8:0x0+0x4]
      ▾ DATA (column 2) — 17 bytes  [0x58+0x11]
        ▾ Compression chunks  [0x58+0x11]
            Chunk header: 14 — stored  [0x58+0x3]
            Stored chunk: 61 6c 70 68 61 62 65 74 61 67 61 6d 6d 61  |alphabetagamma| — 14 bytes  [0x5b+0xe]
          Encoded values: 61 6c 70 68 61 62 65 74 61 67 61 6d 6d 61  |alphabetagamma| — 14 bytes, values (run-length encoded)  [#9:0x0+0xe]
  ▾ Footer  [0xe4+0x7a]
      headerLength: 3  [#1:0x0+0x2]
      contentLength: 176  [#1:0x2+0x3]
    ▾ stripes — StripeInformation  [#1:0x5+0xc]
        offset: 3  [#1:0x7+0x2]
        indexLength: 71  [#1:0x9+0x2]
        dataLength: 31  [#1:0xb+0x2]
        footerLength: 74  [#1:0xd+0x2]
        numberOfRows: 3  [#1:0xf+0x2]
    ▾ types — Type  [#1:0x11+0x18]
        kind: STRUCT (0xc)  [#1:0x13+0x2]
        subtypes: "1, 2"  [#1:0x15+0x4]
        fieldNames: "id"  [#1:0x19+0x4]
        fieldNames: "name"  [#1:0x1d+0x6]
        maximumLength: 0  [#1:0x23+0x2]
        precision: 0  [#1:0x25+0x2]
        scale: 0  [#1:0x27+0x2]
    ▾ types — Type  [#1:0x29+0xa]
        kind: INT (0x3)  [#1:0x2b+0x2]
        maximumLength: 0  [#1:0x2d+0x2]
        precision: 0  [#1:0x2f+0x2]
        scale: 0  [#1:0x31+0x2]
    ▾ types — Type  [#1:0x33+0xa]
        kind: STRING (0x7)  [#1:0x35+0x2]
        maximumLength: 0  [#1:0x37+0x2]
        precision: 0  [#1:0x39+0x2]
        scale: 0  [#1:0x3b+0x2]
      numberOfRows: 3  [#1:0x3d+0x2]
    ▾ statistics — ColumnStatistics  [#1:0x3f+0x6]
        numberOfValues: 3  [#1:0x41+0x2]
        hasNull: 0  [#1:0x43+0x2]
    ▾ statistics — ColumnStatistics  [#1:0x45+0xe]
        numberOfValues: 3  [#1:0x47+0x2]
      ▾ intStatistics — IntegerStatistics  [#1:0x49+0x8]
          minimum: 1  [#1:0x4b+0x2]
          maximum: 3  [#1:0x4d+0x2]
          sum: 6  [#1:0x4f+0x2]
        hasNull: 0  [#1:0x51+0x2]
    ▾ statistics — ColumnStatistics  [#1:0x53+0x18]
        numberOfValues: 3  [#1:0x55+0x2]
      ▾ stringStatistics — StringStatistics  [#1:0x57+0x12]
          minimum: "alpha"  [#1:0x59+0x7]
          maximum: "gamma"  [#1:0x60+0x7]
          sum: 28  [#1:0x67+0x2]
        hasNull: 0  [#1:0x69+0x2]
      rowIndexStride: 10000  [#1:0x6b+0x3]
      writer: 1  [#1:0x6e+0x2]
      softwareVersion: "2.2.2"  [#1:0x70+0x7]
  ▾ PostScript  [0x15e+0x17]
      footerLength: 122  [0x15e+0x2]
      compression: ZSTD (0x5)  [0x160+0x2]
      compressionBlockSize: 65536  [0x162+0x4]
      version: "0, 12"  [0x166+0x4]
      metadataLength: 49  [0x16a+0x2]
      writerVersion: 6  [0x16c+0x2]
      magic: "ORC"  [0x16e+0x7]
    PostScript length: 23  [0x175+0x1]
